tests/macros/password/plugin.stderr
error: option `plugin` does not exist for kind `password`
 --> $DIR/plugin.rs:2:46
  |
2 |     let q = requestty::questions![Password { plugin: todo!() }];
  |                                              ^^^^^^
