tests/macros/password/plugin.rs
fn main() {
    let q = requestty::questions![Password { plugin: todo!() }];
}
